--- a/views/back/admin.hbs
+++ b/views/back/admin.hbs
@@ -49,9 +49,9 @@
                                 <li> 16 gb RAM </li>
                             </ul> -->
                         </td>
-                        <td>{{precio}}</td>
+                        <td>{{dolarApeso precio}}</td>
                         <td>{{stock}}</td>
-                        <td><input type="checkbox" name="destacado" value="{{destacado}}"> </td>
+                        <td><input type="checkbox" name="destacado" value="{{destacado}} disabled"> </td>
                         <td>
                             <a href="/editar-producto/{{id}}">Editar </a><br>
                             <a href="/borrar/{{id}}">Borrar</a>
