--- a/views/front/index.hbs
+++ b/views/front/index.hbs
@@ -31,7 +31,7 @@
                 <div class="col-md-3">
                     <div class="product-item">
                         <div class="product-thumb">
-                            <img class="img-fluid" src={{thumbnail}}
+                            <img class="img-fluid" src={{rutaimg}}
                                 alt="product-img" />
                             <div class="preview-meta">
                                 <ul>
@@ -45,8 +45,8 @@
                             </div>
                         </div>
                         <div class="product-content">
-                            <h4><a href="">{{title}}</a></h4>
-                            <p class="price">u$s{{price}}</p>
+                            <h4><a href="">{{nombre}}</a></h4>
+                            <p class="price">{{dolarApeso precio}}</p>
                         </div>
                     </div>
                 </div>
@@ -62,16 +62,22 @@
                                 <div class="row">
                                     <div class="col-md-8 col-sm-6 col-xs-12">
                                         <div class="modal-image">
-                                            <img class="img-fluid" src={{thumbnail}}
+                                            <img class="img-fluid" src={{rutaimg}}
                                                 alt="product-img" />
                                         </div>
                                     </div>
                                     <div class="col-md-4 col-sm-6 col-xs-12">
                                         <div class="product-short-details">
-                                            <h2 class="product-title">{{title}}</h2>
-                                            <p class="product-price">u$s{{price}}</p>
+                                            <h2 class="product-title">{{nombre}}</h2>
+                                            <p class="product-price">{{dolarApeso precio}}</p>
                                             <div class="product-short-description">
-                                                {{description}}
+                                                {{descripcion}}
+                                                <!--ESTO FUNCIONA, TAL VEZ PARA EL FUTURO
+                                                {{each product.images}}
+                                                    <img src={{this}} alt="">
+                                                {{/each}}
+                                                -->
+                                                {{caracteristicas}}
                                                 <!--<ul>
                                                     <li> i7 </li>
                                                     <li> 11gen </li>
@@ -94,7 +100,9 @@
                         </div>
                     </div>
                 </div>
-                {{/each}}
+            {{/each}}
+            
+            
             </div>
         </div>
     </section>
