--- a/views/back/admin.hbs
+++ b/views/back/admin.hbs
@@ -40,7 +40,11 @@
                             <div>{{descripcion}}</div>
                         </td>
                         <td class="caracteristicas">
-                            {{caracteristicas}}
+                        
+                            {{#listado caracteristicas}}
+                                {{this}}
+                            {{/listado}}
+                        
 
                             <!-- <ul>
                                 <li> i7 </li>
@@ -51,7 +55,9 @@
                         </td>
                         <td>{{dolarApeso precio}}</td>
                         <td>{{stock}}</td>
-                        <td><input type="checkbox" name="destacado" value="{{destacado}} disabled"> </td>
+                        <td>{{#check destacado}}
+                            {{this}}
+                            {{/check}} </td>
                         <td>
                             <a href="/editar-producto/{{id}}">Editar </a><br>
                             <a href="/borrar/{{id}}">Borrar</a>
