editar producto, borrar, login y sesiones

--- a/views/back/editar-producto.hbs
+++ b/views/back/editar-producto.hbs
@@ -6,38 +6,55 @@
 </head>
 
 <body id="backend">
-    <h1>Editando: Lenovo X200</h1>
+    <h1>Editando: {{producto.nombre}}</h1>
     <div class="container mb-4">
         <!-- Start Top Header Bar -->
 {{> header}}
-        <div class="editar-producto mt-4">
-
-
-            <form action="/editar/1" method="post" enctype="multipart/form-data">
+        <div class="agregar-producto mt-4">
+            {{#if mensaje}}
+                <p>{{mensaje}}</p>
+            {{/if}}
+            <form action="/editar-producto/{{producto.id}}" method="post" enctype="multipart/form-data">
                 <div class="row">
 
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="row">
                             <div class="mb-3 col-12 col-md-6">
                                 <label for="nombre" class="form-label">Nombre</label>
-                                <input type="text" class="form-control" id="nombre" value="Lenovo X200" name="nombre"
+                                <input type="text" class="form-control" id="nombre" value={{producto.nombre}} name="nombre"
                                     required>
                             </div>
 
 
                             <div class="mb-3 col-12 col-md-6">
                                 <label for="precio" class="form-label">Precio (u$s)</label>
-                                <input type="text" class="form-control" id="precio" value="1499" name="precio"
+                                <input type="text" class="form-control" id="precio" value={{producto.precio}} name="precio"
                                     title="Sólo números" required>
+                            </div>
+
+                                <div class="mb-3 col-md-3">
+                                <label for="stock" class="form-label small">Stock</label>
+                                <input type="number" class="form-control" id="stock"
+                                    name="stock" value={{producto.stock}} required>
+                            </div>
+
+                             <div class="mb-3 col-md-1">
+                                <label for="destacado" class="form-label small">D</label>
+                                {{#if producto.destacado}}
+                                <input class="form-check-input" type="checkbox" id="destacado"
+                                    name="destacado" value= "1" checked>
+                                    {{else}}
+                                    <input class="form-check-input" type="checkbox" id="destacado"
+                                    name="destacado" value= "1">
+                                {{/if}}
                             </div>
                         </div>
 
 
-                        <div class="mb-3 col-12 editar" id="imagenCargada">
-                            <label for="imagenDeProducto" class="form-label">Imagen</label>
+                        <div class="mb-3 col-12 editar" id="">
+                            <label for="rutaimg" class="form-label">URL Imagen</label>
                             <img src="/uploads/x1_carbon_4_3.jpg-1654801811279.jpg" alt="" class="img-fluid">
-                            <input class="form-control" type="file" id="imagenDeProducto" name="imagenDeProducto"
-                                style="display:none" accept=".png,.jpg,.jpeg">
+                            <input class="form-control" type="text" id="rutaimg" name="rutaimg" value={{producto.rutaimg}} required>
                         </div>
 
 
@@ -48,13 +65,13 @@
                             <div class="mb-3 col-8">
                                 <label for="descripcion" class="form-label">Descripcion</label>
                                 <textarea class="form-control" id="descripcion" rows="16"
-                                    name="descripcion">Es una lenovo requete ... CARAA! </textarea>
+                                 name="descripcion">{{producto.descripcion}}</textarea>
                             </div>
                             <div class="mb-3 col-4">
                                 <label for="caracteristicas" class="form-label">Caracteristicas</label>
                                 <textarea class="form-control" id="caracteristicas" rows="16"
                                     placeholder="Separar con coma las características"
-                                    name="caracteristicas">i7, 11gen, 256gb SSD, 16 gb RAM</textarea>
+                                    name="caracteristicas">{{producto.caracteristicas}}</textarea>
                             </div>
                         </div>
                     </div>
