--- a/views/front/sobre-nosotros.hbs
+++ b/views/front/sobre-nosotros.hbs
@@ -37,7 +37,7 @@
                         fuga est velit nulla culpa modi quis iste tempora non, suscipit repellendus labore voluptatem
                         dicta
                         amet?</p>
-                    <a href="contacto.html" class="btn btn-info mt-20">Contáctenos</a>
+                    <a href="/contacto/" class="btn btn-info mt-20">Contáctenos</a>
                 </div>
             </div>
 
