--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -9,7 +9,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com/">
+                            <a href="https://www.instagram.com/hellonavy90">
                                 <i class="bi bi-instagram"></i>
                             </a>
                         </li>
@@ -20,7 +20,7 @@
                         </li>
                     </ul>
                     <p class="copyright-text">Copyright &copy;2022. Contacto <a
-                            href="mailto:">santiago.acosta@bue.edu.ar</a></p>
+                            href="mailto:">navyflores390@gmail.com</a></p>
                 </div>
             </div>
         </div>
