--- a/views/back/agregar-producto.hbs
+++ b/views/back/agregar-producto.hbs
@@ -12,20 +12,20 @@
  
         <div class="agregar-producto mt-4">
             {{#if mensaje}}
-                <p>{{mensaje}}</p>
+                <p class="p-3 alert alert-{{clase}}">{{mensaje}}</p>
             {{/if}}
-            <form action="/agregar-producto" method="post">
+            <form action="/agregar-producto" method="post" enctype="multipart/form-data">
                 <div class="row">
-                    <div class="col-md-6 col-xl-5">
+                    <div class="col-12 col-md-6 col-xl-12">
                         <div class="row">
-                            <div class="mb-3 col-md-5">
+                            <div class="mb-3 col-12 col-md-5">
                                 <label for="nombre" class="form-label small">Nombre</label>
                                 <input type="text" class="form-control" id="nombre" placeholder="Nombre del producto"
                                     name="nombre" required>
                             </div>
 
 
-                            <div class="mb-3 col-md-3">
+                            <div class="mb-3 col-12 col-md-3">
                                 <label for="precio" class="form-label small">Precio (u$s)</label>
                                 <input type="text" class="form-control" id="precio" placeholder="$ Precio en dólares"
                                     name="precio" required>
@@ -34,35 +34,35 @@
                              <div class="mb-3 col-md-3">
                                 <label for="stock" class="form-label small">Stock</label>
                                 <input type="number" class="form-control" id="stock"
-                                    name="stock" required>
+                                    name="stock" pattern="[0-9]{2}" required>
                             </div>
 
                              <div class="mb-3 col-md-1">
-                                <label for="destacado" class="form-label small">D</label>
+                                <label for="destacado" class="form-label small">Destacado</label>
                                 <input class="form-check-input" type="checkbox" class="form-control" id="destacado"
                                     name="destacado" value= "1">
                             </div>
 
                         </div>
 
-                        <!--<div class="col-12" id="">
-                            <label for="imagenDeProducto" class="form-label btn btn-primary">Subir imagen</label>
+                        <div class="col-12" id="">
+                            <label for="rutaimg" class="form-label btn btn-primary">Subir imagen</label>
                             <div class="preview">
                                 <p>No hay imagen seleccionada para subir</p>
                             </div>
-                            <input class="form-control" type="file" id="imagenDeProducto" name="imagenDeProducto"
+                            <input class="form-control" type="file" id="rutaimg" name="rutaimg"
                                 accept=".png,.jpg,.jpeg" required>
                         </div>
-                        -->
+                        
 
-                        <div class="col-12" id="">
+                        <!-- <div class="col-12" id="">
                             <label for="rutaimg" class="form-label small">URL imagen</label>
 
                             <input class="form-control" type="text" id="rutaimg" name="rutaimg" placeholder="http://" required>
                         </div>
-                    </div>
+                    </div>-->
 
-                    <div class="col-md-6 col-xl-7">
+                    <div class="col-12 col-md-3 col-xl-6">
                         <div class="row">
                             <div class="mb-3 col-8">
                                 <label for="descripcion" class="form-label small">Descripcion</label>
@@ -100,11 +100,11 @@
 
 
     <script>
-        const imagenDeProducto = document.querySelector('#imagenDeProducto');
+        const rutaimg = document.querySelector('#rutaimg');
         const preview = document.querySelector('.preview');
 
-        imagenDeProducto.style.opacity = 0;
-        imagenDeProducto.addEventListener('change', updateImageDisplay);
+        rutaimg.style.opacity = 0;
+        rutaimg.addEventListener('change', updateImageDisplay);
 
         console.log("preview.firstChild", preview.firstChild)
 
@@ -113,7 +113,7 @@
                 preview.removeChild(preview.firstChild);
             }
 
-            const curFiles = imagenDeProducto.files;
+            const curFiles = rutaimg.files;
             console.log("curFiles: ", curFiles)
             if (curFiles.length === 0) {
                 const para = document.createElement('p');
@@ -128,6 +128,7 @@
                     const para = document.createElement('p');
                     para.textContent = `Archivo ${file.name}, tamaño ${returnFileSize(file.size)}.`;
                     const image = document.createElement('img');
+                    image.classList.add('img-fluid')
                     image.src = URL.createObjectURL(file);
 
                     listItem.appendChild(image);
