--- a/views/front/index.hbs
+++ b/views/front/index.hbs
@@ -15,9 +15,9 @@
     <div class="px-4 py-5 text-center bg-primary bg-gradient text-light">
         <h1 class="display-5 fw-bold ">NAVYTECH</h1>
         <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4 text-light">Descripcion corta de lo que trata el negocio</p>
+            <p class="lead mb-4 text-light">Compus re caras casi imposibles de comprar</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-                <a href="contacto.html" class="btn btn-dark btn-lg px-4">Contacto</a>
+                <a href="/contacto/" class="btn btn-dark btn-lg px-4">Contacto</a>
             </div>
         </div>
     </div>
@@ -32,7 +32,7 @@
                 <div class="col-md-3">
                     <div class="product-item">
                         <div class="product-thumb">
-                            <img class="img-fluid" src={{rutaimg}}
+                            <img class="img-fluid" src="/uploads/{{rutaimg}}"
                                 alt="product-img" />
                             <div class="preview-meta">
                                 <ul>
@@ -63,7 +63,7 @@
                                 <div class="row">
                                     <div class="col-md-8 col-sm-6 col-xs-12">
                                         <div class="modal-image">
-                                            <img class="img-fluid" src={{rutaimg}}
+                                            <img class="img-fluid" src="/uploads/{{rutaimg}}"
                                                 alt="product-img" />
                                         </div>
                                     </div>
